# RULER_CALIB

./: CMakeLists.txt  Makefile
data/POSdata/: cameraMes_IMAGE_correctedxyz.campos  zh_pix4d_calibrated_internal_camera_parameters.cam
data/back/: calibration_handler_param.json  camera_info_back.json  images.txt  initial_guess.json  out_put.json  point_clouds.txt
examples/: CalibApp.cpp  POSCalibApp.cpp  SensorsCalibApp.cpp
include/sensors_calib/: CalibrationHandler.hpp  Types.hpp  input_parser.hpp
include/sensors_calib/impl/: CalibrationHandler.ipp  HistogramHandler.ipp
include/sensors_calib/utils/: Utility.hpp
src/: CMakeLists.txt  CalibrationHandler.cpp  HistogramHandler.cpp  Types.cpp  Utility.cpp
